[package]
authors = ["QRC Contributors"]
categories = ["Algorithms", "Encoding", "Images", "Rendering", "Visualization"]
description = """
A Rust library for generating and manipulating QR code images in various formats
"""
documentation = "https://docs.rs/qrc"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://qrclib.one"
keywords = ["barcode", "mini-functions", "qr", "qrc", "qrcode"]
license = "MIT OR Apache-2.0"
name = "qrc"
repository = "https://github.com/sebastienrousseau/qrc/"
rust-version = "1.71.1"
version = "0.0.5"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
flate2 = "1.0.28"
image = "0.25.1"

[dependencies.qrcode]
default-features = false
features = ["svg"]
optional = false
version = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []

[lib]
path = "src/lib.rs"
name = "qrc"
plugin = false
proc-macro = false
crate-type = ["lib"]
required-features = []

[[bench]]
path = "benches/qrc.rs"
name = "qrc"
plugin = false
proc-macro = false
harness = false
required-features = []

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
